--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
             "email": "huojiuxing@163.com"
         }
     ],
+    "license": "MIT",
     "require": {},
     "autoload": {
     	"psr-4": {
